# CSCI334-SFA

./: .gitignore  README.md  package-lock.json  pyproject.toml
client/src/: App.tsx
client/src/api/: fetch.ts
client/src/components/: BasicTable.tsx
client/src/components/common/: BreadCrumb.tsx  MenuItems.tsx
client/src/components/dropdowns/: CustomerDropdown.tsx  DashboardDropdown.tsx  SoleTraderDropdown.tsx
client/src/components/forms/: LandingForm.tsx  LoginForm.tsx  RegisterForm.tsx  RegisterLoginForm.tsx
client/src/components/nav/: DashboardHeader.tsx  DashboardMobileHeader.tsx  Dropdown.tsx  Header.tsx  Sidebar.tsx  (+1 more)
client/src/context/: ProfileContext.tsx
client/src/layout/: DashboardLayout.tsx  Layout.tsx
client/src/pages/: Authentication.tsx
client/src/utilities/: formating.tsx  menuItems.tsx
client/src/utils/: fetchRequest.ts  formSubmit.ts
documentation/: class_diagram.uxf  user-template.py
server/: main.py  package.json  pom.xml
server/controllers/: auth.py  profile.py  user.py
server/database/: .env  Dockerfile  docker-compose.yml  init_db.py  schema.sql
server/models/: auth.py  profile.py  user-template.py
server/routes/: auth.py  profile.py  user.py
server/utils/: __init__.py  request.py
src/: App.tsx
src/components/common/: BreadCrumb.tsx  MoreInfo.tsx
src/components/dropdowns/: DashboardDropdown.tsx  Dropdown.tsx
src/components/forms/: RegisterLoginForm.tsx
src/components/ui/: Membership.tsx
src/layout/: Layout.tsx
src/pages/: Authentication.tsx
src/pages/Dashboard/: Home.tsx  Profile.tsx  Settings.tsx
(+16 files in other folders)
